# bubble-rings

./: .gitlab-ci.yml  CMakeLists.txt  README.md  bubbleringDebugging  imgui.ini  pom.xml
.github/workflows/: cmake.yml
src/: Application.cpp  CMakeLists.txt  CatmullRom.cpp  CatmullRom.h  FloatExceptionEnabler.hh  assert.cc  assert.hh  background.frag  background.vert  bezier.cpp  bezier.h  color.frag  filament.cpp  filament.h  filament_unittest.cpp  frame.h  glfw_window.cpp  glfw_window.h  glmath.cpp  glmath.h  main.cpp  path.h  phong.frag  phong.vert  planet.h  reflection.frag  reflection.vert  shader.h  solid_color.frag  solid_color.vert  sphere.cpp  test_tube.frag  test_tube.vert  texture.cpp  tube.cpp  tube.h  tube_viewer.cpp  tube_viewer.h
src/main/java/: HelloWorld.java
test/: CMakeLists.txt  example.cpp  example_add.cpp  filamentTest.cpp  testunit.cpp
test/testunit/: CMakeLists.txt
